# homeworkOpenMp

./: CMakeLists.txt  Task1.h  Task10.h  Task11.h  Task12.h  Task13_1.h  Task2.h  Task3.h  Task4.h  Task5.h  Task6.h  Task7.h  Task8.h  Task9.h  main.cpp
